# soil-modeling

./: pyproject.toml
soil_modeling/: columb_model_pq.py  ex5_MMC.ipynb  exam2020_p3_MMC.ipynb  matrices.py  modified_cam_clay.py  power_symbolic_computation.py  test_sympy.py  undrained_triaxial_test.py
