[tool.poetry]
name = "symbolic-computations"
version = "0.1.0"
description = "Python exampels of some relevant computations in for the course soil modeling"
authors = ["Sunniva Indrehus <sunniva.indrehus@ngi.no>"]
license = "MIT"
readme = "README.md"
packages = [{include = "symbolic_computations"}]

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.11.1"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
pyqt5 = "5.9.2"
tk = "^0.1.0"
jupyterhub = "^3.0.0"
ipykernel = "^6.17.1"
notebook = "^6.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
